test_case/Rust-GCC_gccrs/1533_1245554688.rs
rust
mod foo {
    #[macro_export]
    macro_rules! bar1 {
        () => {};
    }

    macro_rules! bar2 {
        () => {};
    }
}

fn main() {
    bar1!();
    bar2!(); // { dg-error "cannot find macro .bar2. in this scope" }
}
